--- a/public/css/default.css
+++ b/public/css/default.css
@@ -19,3 +19,19 @@ a {
 a:hover {
 	text-decoration: underline;
 }
+.cf:before, .cf:after {
+	content: "";
+	display: table;
+}
+.cf:after {
+	clear: both;
+}
+.cf {
+	*zoom: 1;
+}
+.fl {
+	float: left;
+}
+.fr {
+	float: right;
+}
