--- a/public/css/default.css
+++ b/public/css/default.css
@@ -17,7 +17,7 @@ a {
 	text-decoration: none;
 }
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 }
 .cf:before, .cf:after {
 	content: "";
